# libketama-c

./: .gitignore  CMakeLists.txt  README  index.html  params.json
libketama/: ketama.c  ketama.h  main.cpp
libketama.xcodeproj/: project.pbxproj
libketama.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libketama.xcodeproj/project.xcworkspace/xcshareddata/: libketama.xccheckout
